--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
 
-<app-nuevo-componente></app-nuevo-componente>
-<app-nuevo-componente></app-nuevo-componente>
-<app-nuevo-componente></app-nuevo-componente>
+<app-nuevo-componente name="Juan"></app-nuevo-componente>
+<app-nuevo-componente name="Carlos"></app-nuevo-componente>
+<app-nuevo-componente name="Claudio"></app-nuevo-componente>
